Tin - Fix scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,28 +10,54 @@ body {
 }
 
 /* Custom scrollbar */
-body::-webkit-scrollbar {
-    width: 10px;
-    background-color: #f5f5f5;
+// body::-webkit-scrollbar {
+//     width: 10px;
+//     background-color: #f5f5f5;
+// }
+// body::-webkit-scrollbar-track {
+//     box-shadow: inset 0 0 6px rgba (0, 0, 0, 0.3);
+//     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     background-color: #f5f5f5;
+//     border-radius: 10px;
+// }
+// body::-webkit-scrollbar-thumb {
+//     border-radius: 10px;
+//     height: 96px !important;
+//     background-color: #fff;
+//     background-image: -webkit-gradient(
+//         linear,
+//         40% 0%,
+//         75% 84%,
+//         from(rgb(0, 70, 59, 0.8)),
+//         to(rgba(0, 70, 59, 0.8)),
+//         color-stop(0.6, rgba(0, 70, 59, 0.6))
+//     );
+// }
+
+html::-webkit-scrollbar {
+    width: 7px;
+    background: rgb(136, 136, 136);
 }
-body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba (0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #f5f5f5;
+
+html::-webkit-scrollbar-track {
+    background: rgb(179, 177, 177);
     border-radius: 10px;
 }
-body::-webkit-scrollbar-thumb {
+
+html::-webkit-scrollbar-thumb {
+    background: rgb(112, 112, 112);
+    height: 96px;
     border-radius: 10px;
-    height: 96px !important;
-    background-color: #fff;
-    background-image: -webkit-gradient(
-        linear,
-        40% 0%,
-        75% 84%,
-        from(rgb(0, 70, 59, 0.8)),
-        to(rgba(0, 70, 59, 0.8)),
-        color-stop(0.6, rgba(0, 70, 59, 0.6))
-    );
+}
+
+html::-webkit-scrollbar-thumb:hover {
+    background: rgb(77, 77, 77);
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:active {
+    background: rgb(68, 68, 68);
+    border-radius: 10px;
 }
 
 a {
